[gd_scene load_steps=4 format=2]

[ext_resource path="res://xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 528.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Gravitee"
autowrap = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 60.0
margin_right = 67.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
